fix(blog): fix broken layout
Set hb-blog-post-main min-width as 1px

--- a/modules/blog/assets/hb/modules/blog/scss/post/_main.scss
+++ b/modules/blog/assets/hb/modules/blog/scss/post/_main.scss
@@ -19,4 +19,5 @@
 
 .hb-blog-post-main {
     grid-area: main;
+    min-width: 1px;
 }
